# the-gioi-am-nhac

./: .gitattributes  .gitignore  README.md  app.py  example.db  home.html  index.html  manual_add_tables.py  manual_query.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.js
audio/: Kenbau4.gpk  thanhla1.gpk
docker/: Dockerfile  docker-compose.yml
images/: Gioithieu.doc  MAU.psd  MAU1.psd  MAUMOIDUNG 2.psd  MAUMOIDUNG.psd
images/Minhhoa/: B038-910.htm  B047dnut.htm  Ba040-31.htm  Ba041-32.htm  Ba042-33.htm  Ba043-34.htm  Ba044-35.htm  Ba045-11.htm  Ba046-12.htm  Ba053-14.htm  Ba054-16.htm  Ba055-17.htm  Ba056-15.htm  Ba057-13.htm  Ba058-18.htm  Ba059-19.htm  Ba060-22.htm  Ba061-23.htm  Ba062-24.htm  Ba063-25.htm  Ba064-26.htm  Ba065-28.htm  Ba066-29.htm  Ba067-30.htm  Day132-1.htm  Day133-2.htm  Day134-3.htm  Day135-5.htm  Day136-6.htm  Day137-4.htm  GT190-20.htm  GT191bac.htm  GT192-1.htm  GT194-3.htm  GT195-16.htm  GT196-4.htm  GT197-5.htm  GT198-6.htm  GT199-21.htm  (+199 more)
instance/: test.db
routes/: __init__.py  library.py  main.py  music_world.py  quiz.py  thesis.py
src/: App.svelte  Canvas.svelte  app.css  main.js
static/: style.css  three.module.js
templates/: 3d_view.html  3dpreview.html  development.html  gallery.html  header.html  home.html  index.html  infographic.html  learning.html  library.html  musicworld.html  quest.html  question.html  quiz.html  sidebar.html  thesis_search_result.html  three.html  vnmap.html
utils/: __init__.py  button.py  list.py  nav.py  quiz_db.py  upload.py
(+255 files in other folders)
